map화면 우측 상단의 아이콘 버튼 영역 작업

--- a/base/html/map_crossroad_view2.html
+++ b/base/html/map_crossroad_view2.html
@@ -35,7 +35,7 @@
       <main class="ly-container">
         <div id="map1" class="ly-map">
           <!-- 지도 타입 선택 -->
-          <div class="map-type">
+          <!-- <div class="map-type">
             <label>
               <input type="radio" checked name="maptype" />
               <span>일반지도</span>
@@ -44,8 +44,54 @@
               <input type="radio" name="maptype" />
               <span>위성지도</span>
             </label>
-          </div>
+          </div> -->
           <!-- //지도 타입 선택 -->
+
+          <!-- 우측 상단 아이콘바 -->
+          <div class="map-iconbar-container map-selection pos-right2">
+            <button type="button" class="btn-display">
+              <span><em>일반지도</em></span>
+            </button>
+            <div class="map-icon-list">
+              <button type="button" class="ic1">
+                <span><em>일반지도</em></span>
+              </button>
+              <button type="button" class="ic2">
+                <span><em>야간지도</em></span>
+              </button>
+              <button type="button" class="ic3">
+                <span><em>위성지도</em></span>
+              </button>
+            </div>
+            <!-- //map-icon-list -->
+          </div>
+          <!-- //map-iconbar-container -->
+
+          <div class="map-iconbar-container map-cw pos-right1">
+            <button type="button" class="btn-display">
+              <span><em class="screen-out">현재 적용된 아이콘</em></span>
+            </button>
+            <div class="map-icon-list">
+              <button type="button" class="ic1">
+                <span><em>차량정보</em></span>
+              </button>
+              <button type="button" class="ic2">
+                <span><em>LOS</em></span>
+              </button>
+              <button type="button" class="ic3">
+                <span><em>신호등</em></span>
+              </button>
+              <button type="button" class="ic4">
+                <span><em>카메라</em></span>
+              </button>
+              <button type="button" class="ic5">
+                <span><em>레이더</em></span>
+              </button>
+            </div>
+            <!-- //map-icon-list -->
+          </div>
+          <!-- //map-iconbar-container -->
+          <!-- //우측 상단 아이콘바 -->
 
           <!-- <div class="map-state-legend-container">
             <ul class="map-state-toggle">
