--- a/base/html/map_setting.html
+++ b/base/html/map_setting.html
@@ -42,7 +42,7 @@
           </div>
 
           <!-- 지도 타입 선택 -->
-          <div class="map-type">
+          <!-- <div class="map-type">
             <label>
               <input type="radio" checked name="maptype" />
               <span>일반지도</span>
@@ -51,8 +51,28 @@
               <input type="radio" name="maptype" />
               <span>위성지도</span>
             </label>
-          </div>
+          </div> -->
           <!-- //지도 타입 선택 -->
+
+          <!-- 우측 상단 아이콘바 -->
+          <div class="map-iconbar-container map-selection pos-right1">
+            <button type="button" class="btn-display">
+              <span><em>일반지도</em></span>
+            </button>
+            <div class="map-icon-list">
+              <button type="button" class="ic1">
+                <span><em>일반지도</em></span>
+              </button>
+              <button type="button" class="ic2">
+                <span><em>야간지도</em></span>
+              </button>
+              <button type="button" class="ic3">
+                <span><em>위성지도</em></span>
+              </button>
+            </div>
+            <!-- //map-icon-list -->
+          </div>
+          <!-- //map-iconbar-container -->
 
           <!-- 시스템 네비게이션 -->
           <div class="system-nav">
