--- a/base/html/set_point_map.html
+++ b/base/html/set_point_map.html
@@ -37,7 +37,7 @@
           </div>
 
           <!-- 지도 타입 선택 -->
-          <div class="map-type">
+          <!-- <div class="map-type">
             <label>
               <input type="radio" checked name="maptype" />
               <span>일반지도</span>
@@ -46,11 +46,11 @@
               <input type="radio" name="maptype" />
               <span>위성지도</span>
             </label>
-          </div>
+          </div> -->
           <!-- //지도 타입 선택 -->
 
           <!-- 구역명 -->
-          <div class="ui selection dropdown area-box">
+          <div class="ui selection dropdown area-box pos-right2">
             <input type="hidden" name="" />
             <div class="default text">서울시 공릉동</div>
             <div class="menu">
@@ -66,6 +66,26 @@
             </div>
           </div>
           <!-- //구역명 -->
+
+          <!-- 우측 상단 아이콘바 -->
+          <div class="map-iconbar-container map-selection pos-right1">
+            <button type="button" class="btn-display">
+              <span><em>일반지도</em></span>
+            </button>
+            <div class="map-icon-list">
+              <button type="button" class="ic1">
+                <span><em>일반지도</em></span>
+              </button>
+              <button type="button" class="ic2">
+                <span><em>야간지도</em></span>
+              </button>
+              <button type="button" class="ic3">
+                <span><em>위성지도</em></span>
+              </button>
+            </div>
+            <!-- //map-icon-list -->
+          </div>
+          <!-- //map-iconbar-container -->
 
           <!-- 시스템 네비게이션 -->
           <div class="system-nav">
