--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -394,17 +394,18 @@
             </div>
             <!-- //tit-header -->
             <article class="accidents-stats-content">
-              <!-- 231012 수정 -->
+              <!-- 231018 수정 -->
               <div class="chart-view">
                 <div class="chart-container">
-                  <img src="https://www.dummyimage.com/360x180/ddd/000.png&amp;text=Chart+Area" alt="퍼블리싱 확인용 더미 이미지" class="dummy-img" />
+                  <img src="https://www.dummyimage.com/362x181/ddd/000.png&amp;text=Chart+Area" alt="퍼블리싱 확인용 더미 이미지" class="dummy-img" />
                 </div>
                 <dl class="cumulative-num">
                   <dt>돌발 유형 별 누적 건수</dt>
-                  <dd>(2023.00.00 ~ 2023.00.00)</dd>
+                  <dd>(2023년 5월 21일 00시 ~ 현재)</dd>
                 </dl>
               </div>
               <!-- //chart-view -->
+              <!-- 231018 수정 -->
               <div class="txt-view">
                 <div class="txt-view-header">
                   <span class="tit">총 돌발 건수</span>
@@ -414,23 +415,38 @@
                 <div class="txt-view-data">
                   <table>
                     <colgroup>
-                      <col style="width: 100px" />
+                      <col style="width: 120px" />
                       <col />
                       <col />
                     </colgroup>
                     <tbody>
                       <tr>
-                        <th><em class="data-stop">정지</em></th>
+                        <th><em class="sudden1">무단횡단</em></th>
                         <td><em>999</em>건</td>
                         <td><em>21</em>%</td>
                       </tr>
                       <tr>
-                        <th><em class="data-cw">보행자</em></th>
+                        <th><em class="sudden2">정지</em></th>
                         <td><em>999</em>건</td>
                         <td><em>69</em>%</td>
                       </tr>
                       <tr>
-                        <th><em class="data-reverse">역주행</em></th>
+                        <th><em class="sudden3">역주행</em></th>
+                        <td><em>999</em>건</td>
+                        <td><em>10</em>%</td>
+                      </tr>
+                      <tr>
+                        <th><em class="sudden4">꼬리물기</em></th>
+                        <td><em>999</em>건</td>
+                        <td><em>10</em>%</td>
+                      </tr>
+                      <tr>
+                        <th><em class="sudden5">정지선 위반</em></th>
+                        <td><em>999</em>건</td>
+                        <td><em>10</em>%</td>
+                      </tr>
+                      <tr>
+                        <th><em class="sudden6">지정 차로 위반</em></th>
                         <td><em>999</em>건</td>
                         <td><em>10</em>%</td>
                       </tr>
@@ -561,7 +577,7 @@
                       <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
                     </td>
                   </tr>
-                  <tr>
+                  <!-- <tr>
                     <td>11:30:15</td>
                     <td>00방면</td>
                     <td>북</td>
@@ -570,7 +586,7 @@
                     <td>
                       <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 보기 버튼</span></button>
                     </td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
