1. 지도 화면: 우측 상단 마커 모드 수정 2. 교차로 상세화면: 돌발 탭의 통계 영역이 확장될 때 출력되는 총 돌발건수 데이터UI 2차 수정 3. 교차로 통계 화면: 요약 정보 수정

--- a/base/html/crossroads_stats_main.html
+++ b/base/html/crossroads_stats_main.html
@@ -201,21 +201,34 @@
                       <em class="tit">종류 별 돌발 발생 건 수</em>
                       <div class="tbl-bind">
                         <table>
+                          <!-- 231019 col 너비 수정 -->
                           <colgroup>
-                            <col style="width: 50%" />
-                            <col style="width: 50%" />
+                            <col style="width: 58%" />
+                            <col style="width: 42%" />
                           </colgroup>
                           <tbody>
                             <tr>
-                              <th>역주행</th>
-                              <td><em>34,860</em> 건</td>
+                              <th>무단횡단</th>
+                              <td><em>1,860</em> 건</td>
                             </tr>
                             <tr>
                               <th>정지</th>
                               <td><em>50,843</em> 건</td>
                             </tr>
                             <tr>
-                              <th>보행자</th>
+                              <th>역주행</th>
+                              <td><em>34,860</em> 건</td>
+                            </tr>
+                            <tr>
+                              <th>꼬리물기</th>
+                              <td><em>34,860</em> 건</td>
+                            </tr>
+                            <tr>
+                              <th>정지선 위반</th>
+                              <td><em>26,549</em> 건</td>
+                            </tr>
+                            <tr>
+                              <th>지정 차로 위반</th>
                               <td><em>26,549</em> 건</td>
                             </tr>
                           </tbody>
