--- a/base/html/admin_change_pw.html
+++ b/base/html/admin_change_pw.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container w510">
+      <!-- 231021  w450 클래스명으로 변경-->
+      <div class="modal-container w450">
         <div class="modal-header">
           <span class="tit">비밀번호 변경</span>
         </div>
