--- a/base/html/admin_list.html
+++ b/base/html/admin_list.html
@@ -57,7 +57,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table is-fncbtn">
+              <!-- 231021 table에 is-fncbtn-and-chkbox 클래스명으로 변경  -->
+              <table class="ui very basic table is-fncbtn-and-chkbox">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
