--- a/base/html/bj_view.html
+++ b/base/html/bj_view.html
@@ -23,10 +23,11 @@
         <div class="modal-body">
           <div class="data-tbl view">
             <table>
+              <!-- 231021 colgroup 너비 수정 -->
               <colgroup>
-                <col style="width: 150px" />
-                <col />
-                <col style="width: 150px" />
+                <col style="width: 140px" />
+                <col style="width: 165px" />
+                <col style="width: 140px" />
                 <col />
               </colgroup>
               <tbody>
@@ -36,13 +37,13 @@
                 </tr>
                 <tr>
                   <th>실행 주기</th>
-                  <td colspan="3">00/5 ***</td>
+                  <td>00/5 ***</td>
+                  <th>실행 상태</th>
+                  <td>Y</td>
                 </tr>
                 <tr>
                   <th>최종 실행</th>
-                  <td>2021-06-07 12:31:33</td>
-                  <th>실행 상태</th>
-                  <td>Y</td>
+                  <td colspan="3">2021-06-07 12:31:33</td>
                 </tr>
                 <tr>
                   <th class="rowspan-style1">내용</th>
