--- a/base/html/camera_map_view.html
+++ b/base/html/camera_map_view.html
@@ -38,19 +38,6 @@
             <div class="section">지점 Map 설정</div>
           </div>
 
-          <!-- 지도 타입 선택 -->
-          <div class="map-type">
-            <label>
-              <input type="radio" checked name="maptype" />
-              <span>일반지도</span>
-            </label>
-            <label>
-              <input type="radio" name="maptype" />
-              <span>위성지도</span>
-            </label>
-          </div>
-          <!-- //지도 타입 선택 -->
-
           <!-- 카메라 정보 설정 조회 팝업 : 팝업 위치는 ly-map Div의 자식요소가 되어야 합니다.  -->
           <div id="ex" class="modal">
             <div class="modal-container medium">
@@ -147,7 +134,7 @@
               <!-- //modal-body -->
               <div class="modal-bottom">
                 <a href="#" class="btn-modal-open ui primary basic button rounded">수정</a>
-                <a href="#" rel="modal:close" class="ui secondary basic button rounded">목록</a>
+                <a href="#" rel="modal:close" class="ui secondary basic button rounded">확인</a>
               </div>
               <!-- //modal-bottom -->
             </div>
