--- a/base/html/set_area_info_view.html
+++ b/base/html/set_area_info_view.html
@@ -45,12 +45,14 @@
                   <th>경도</th>
                   <td>126.881465</td>
                 </tr>
-                <tr>
+                <!-- 231021 : is-chkbox 클래스명 추가 -->
+                <tr class="is-chkbox">
                   <th>표출 레벨</th>
                   <td>7</td>
                   <th>기본 구역</th>
                   <td>
-                    <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                    <!-- 231021 : md클래스명 추가 -->
+                    <div class="ui checkbox primary-chkbox md txt-none c-bluesky">
                       <input type="checkbox" />
                       <label></label>
                     </div>
