--- a/base/html/set_config_add.html
+++ b/base/html/set_config_add.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231021  w600 클래스명으로 변경-->
+      <div class="modal-container w600">
         <div class="modal-header">
           <span class="tit">환경 설정</span>
         </div>
