--- a/base/html/signal_info_list.html
+++ b/base/html/signal_info_list.html
@@ -73,8 +73,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <!-- 231010 is-fncbtn2로 클래스명 변경 -->
-              <table class="ui very basic table is-fncbtn2">
+              <!-- 231021 table에 is-fncbtn-and-chkbox2 클래스명으로 변경  -->
+              <table class="ui very basic table is-fncbtn-and-chkbox2">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
