--- a/base/html/admin_add.html
+++ b/base/html/admin_add.html
@@ -31,13 +31,14 @@
               <tbody>
                 <tr>
                   <th>관리자 ID</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
                   <td class="pdl-15">
-                    <button class="ui secondary basic button rounded" style="width: 100%; line-height: 3.5rem">중복확인</button>
+                    <!-- 231021 인라인 스타일 삭제 및 overlap 클래스명 추가  -->
+                    <button class="ui secondary basic button rounded overlap">중복확인</button>
                   </td>
                 </tr>
                 <tr>
@@ -50,13 +51,14 @@
                 </tr>
                 <tr>
                   <th>이메일 주소</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
                   </td>
                   <td class="pdl-15">
-                    <button class="ui secondary basic button rounded" style="width: 100%; line-height: 3.5rem">중복확인</button>
+                    <!-- 231021 인라인 스타일 삭제 및 overlap 클래스명 추가  -->
+                    <button class="ui secondary basic button rounded overlap">중복확인</button>
                   </td>
                 </tr>
                 <tr>
