--- a/base/html/admin_noti.html
+++ b/base/html/admin_noti.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container w427">
+      <!-- 231021 w340 클래스명으로 변경 -->
+      <div class="modal-container w340">
         <div class="modal-header">
           <span class="tit">알림 설정</span>
         </div>
