--- a/base/html/dashboard_main.html
+++ b/base/html/dashboard_main.html
@@ -164,34 +164,34 @@
                   <!-- //traffic-accrue-top -->
                   <ul class="traffic-accrue-chart">
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">1. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">2. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">3. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">4. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">5. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">6. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">7. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">8. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">9. 차트 영역</div>
                     </li>
                     <li>
-                      <div class="chart-item">차트 영역</div>
+                      <div class="chart-item">10. 차트 영역</div>
                     </li>
                   </ul>
                   <!-- //traffic-accrue-chart -->
@@ -285,45 +285,69 @@
               <!-- //dashboard-current-center -->
 
               <article class="dashboard-current-right">
+                <!-- 231021 : 차트 영역 및 돌발 항목 마크업 수정/차트 사이즈 수정/event-current-legend 영역 수정-->
                 <section class="event-current-container cr">
                   <em class="event-current-tit">교차로 이벤트 현황</em>
-                  <div class="event-current-chart">
-                    <em>돌발 발생 건수</em>
+                  <em class="event-current-chart-tit">돌발 발생 건수</em>
+                  <div class="event-current-bind">
                     <div class="event-current-chart-wrap">
-                      <!-- 차트 사이즈 : 176(px) X 177(px) -->
+                      <!-- 차트 사이즈 : 161(px) X 161(px) -->
                       <img
-                        src="https://www.dummyimage.com/176x177/ddd/000.png&amp;text=Chart+Area"
+                        src="https://www.dummyimage.com/161x161/ddd/000.png&amp;text=Chart+Area"
                         alt="퍼블리싱 확인용 더미 이미지"
                         class="dummy-img"
                       />
                     </div>
                     <!-- //event-current-chart-wrap -->
+
+                    <!-- //event-current-chart -->
+                    <ul class="event-current-legend">
+                      <li>
+                        <span class="tit sudden1">무단횡단</span>
+                        <div class="right">
+                          <span><em>999</em>건</span>
+                          <span><em>36</em>%</span>
+                        </div>
+                      </li>
+                      <li>
+                        <span class="tit sudden2">정지</span>
+                        <div class="right">
+                          <span><em>20</em>건</span>
+                          <span><em>23</em>%</span>
+                        </div>
+                      </li>
+                      <li>
+                        <span class="tit sudden3">역주행</span>
+                        <div class="right">
+                          <span><em>50</em>건</span>
+                          <span><em>62</em>%</span>
+                        </div>
+                      </li>
+                      <li>
+                        <span class="tit sudden4">꼬리물기</span>
+                        <div class="right">
+                          <span><em>50</em>건</span>
+                          <span><em>62</em>%</span>
+                        </div>
+                      </li>
+                      <li>
+                        <span class="tit sudden5">정지선 위반</span>
+                        <div class="right">
+                          <span><em>50</em>건</span>
+                          <span><em>62</em>%</span>
+                        </div>
+                      </li>
+                      <li>
+                        <span class="tit sudden6">지정차로 위반</span>
+                        <div class="right">
+                          <span><em>50</em>건</span>
+                          <span><em>62</em>%</span>
+                        </div>
+                      </li>
+                    </ul>
+                    <!-- //event-current-legend -->
                   </div>
-                  <!-- //event-current-chart -->
-                  <ul class="event-current-legend">
-                    <li>
-                      <span class="tit">역주행</span>
-                      <div class="right">
-                        <span><em>10</em>건</span>
-                        <span><em>13</em>%</span>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="tit">정지</span>
-                      <div class="right">
-                        <span><em>20</em>건</span>
-                        <span><em>23</em>%</span>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="tit">보행자</span>
-                      <div class="right">
-                        <span><em>50</em>건</span>
-                        <span><em>62</em>%</span>
-                      </div>
-                    </li>
-                  </ul>
-                  <!-- //event-current-legend -->
+                  <!-- //event-current-bind -->
                   <dl class="event-current-count">
                     <dt>장애 발생 건수</dt>
                     <dd>카메라 이상 10건</dd>
