--- a/base/html/radar_add.html
+++ b/base/html/radar_add.html
@@ -33,7 +33,7 @@
                 <tbody>
                   <tr>
                     <th rowspan="2" class="rowspan-style1">구역</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="selectbox-wrap rounded">
                         <select>
                           <option value="">선택</option>
@@ -76,7 +76,7 @@
                   </tr>
                   <tr>
                     <th>레이더 ID</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="ui input rounded">
                         <input type="text" />
                       </div>
@@ -90,7 +90,7 @@
                   </tr>
                   <tr>
                     <th>검지 방향</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="selectbox-wrap rounded">
                         <select>
                           <option value="">선택</option>
@@ -108,7 +108,7 @@
                   </tr>
                   <tr>
                     <th>위도</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="ui input rounded">
                         <input type="text" />
                       </div>
@@ -123,7 +123,8 @@
                   <tr>
                     <th>각도</th>
                     <td colspan="3">
-                      <div class="ui input rounded" style="width: 198px">
+                      <!-- 231021 인라인 스타일 수정 -->
+                      <div class="ui input rounded" style="width: 181px">
                         <input type="text" />
                       </div>
                     </td>
