--- a/base/html/road_add.html
+++ b/base/html/road_add.html
@@ -32,7 +32,7 @@
               <tbody>
                 <tr>
                   <th rowspan="2" class="rowspan-style1">구역</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="selectbox-wrap rounded">
                       <select>
                         <option value="">선택</option>
@@ -42,7 +42,7 @@
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">지점</th>
+                  <th class="pdl-15">지점 유형</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -85,7 +85,7 @@
                 </tr>
                 <tr>
                   <th>도로 명</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -108,7 +108,7 @@
                 </tr>
                 <tr>
                   <th>방향 명</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -122,7 +122,7 @@
                 </tr>
                 <tr>
                   <th>위도</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -136,7 +136,7 @@
                 </tr>
                 <tr>
                   <th>각도</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
