--- a/base/html/road_edit.html
+++ b/base/html/road_edit.html
@@ -32,12 +32,12 @@
               <tbody>
                 <tr>
                   <th rowspan="2" class="rowspan-style1">구역</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" disabled />
                     </div>
                   </td>
-                  <th class="pdl-15">지점</th>
+                  <th class="pdl-15">지점 유형</th>
                   <td>
                     <div class="ui input rounded">
                       <input type="text" disabled />
@@ -53,7 +53,7 @@
                   <th>지점 ID</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" disabled />
+                      <input type="text" />
                     </div>
                   </td>
                 </tr>
@@ -61,7 +61,7 @@
                   <th>지점 주소</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" disabled />
+                      <input type="text" />
                     </div>
                   </td>
                 </tr>
@@ -69,13 +69,13 @@
                   <th>도로 ID</th>
                   <td colspan="3">
                     <div class="ui input rounded">
-                      <input type="text" disabled />
+                      <input type="text" />
                     </div>
                   </td>
                 </tr>
                 <tr>
                   <th>도로 명</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -98,7 +98,7 @@
                 </tr>
                 <tr>
                   <th>방향 명</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -112,7 +112,7 @@
                 </tr>
                 <tr>
                   <th>위도</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
@@ -126,7 +126,7 @@
                 </tr>
                 <tr>
                   <th>각도</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" />
                     </div>
