--- a/base/html/comparison_popup.html
+++ b/base/html/comparison_popup.html
@@ -16,7 +16,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231023 w790클래스명으로 변경 -->
+      <div class="modal-container w790">
         <div class="modal-header">
           <span class="tit">비교 지점 선택</span>
         </div>
