--- a/base/html/linkage_edit.html
+++ b/base/html/linkage_edit.html
@@ -32,7 +32,7 @@
               <tbody>
                 <tr>
                   <th>구역</th>
-                  <td class="pdr-20">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" disabled />
                     </div>
@@ -117,7 +117,7 @@
 
                 <tr>
                   <th>교차로 종류</th>
-                  <td colspan="3" class="pdr-20">
+                  <td colspan="3">
                     <div class="selectbox-wrap rounded">
                       <select>
                         <option value="">중요교차로</option>
