--- a/base/html/signal_info_edit1.html
+++ b/base/html/signal_info_edit1.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231023 w690 클래스명으로 변경 -->
+      <div class="modal-container w690">
         <div class="modal-header">
           <span class="tit">신호 정보</span>
         </div>
@@ -97,7 +98,7 @@
             <div class="data-tbl-very md type2 is-form">
               <table class="ui very basic table md">
                 <colgroup>
-                  <col style="width: 100px" />
+                  <col style="width: 80px" />
                   <col style="width: 50px" />
                   <col style="width: 110px" />
                   <col />
