--- a/base/html/signal_info_edit2.html
+++ b/base/html/signal_info_edit2.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231023 w690 클래스명으로 변경 -->
+      <div class="modal-container w690">
         <div class="modal-header">
           <span class="tit">신호 정보</span>
         </div>
@@ -93,7 +94,8 @@
             </div>
             <!-- //data-tbl -->
 
-            <em class="modal-body-sub-tit type3">도로 별 신호 연동</em>
+            <!-- 231023 modal-body-sub-tit에 type2로 클래스명 변경 -->
+            <em class="modal-body-sub-tit type2">도로 별 신호 연동</em>
             <div class="data-tbl-very md type3 is-form">
               <table class="ui very basic table md">
                 <thead>
