--- a/base/html/signal_info_view1.html
+++ b/base/html/signal_info_view1.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231023 w690 클래스명으로 변경 -->
+      <div class="modal-container w690">
         <div class="modal-header">
           <span class="tit">신호 정보</span>
         </div>
@@ -62,6 +63,18 @@
             <em class="modal-body-sub-tit type2">도로 별 신호 연동</em>
             <div class="data-tbl-very md type2">
               <table class="ui very basic table md">
+                <!-- 231023 colgroup 추가 -->
+                <colgroup>
+                  <col style="width: 80px" />
+                  <col style="width: 50px" />
+                  <col style="width: 110px" />
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                  <col />
+                </colgroup>
                 <thead>
                   <tr>
                     <th rowspan="2">도로 명</th>
