--- a/base/html/signal_info_add2.html
+++ b/base/html/signal_info_add2.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container medium">
+      <!-- 231023 w690 클래스명으로 변경 -->
+      <div class="modal-container w690">
         <div class="modal-header">
           <span class="tit">신호 정보</span>
         </div>
@@ -33,7 +34,7 @@
                 <tbody>
                   <tr>
                     <th>구역</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="selectbox-wrap rounded">
                         <select>
                           <option value="">태릉</option>
@@ -86,7 +87,7 @@
                   </tr>
                   <tr>
                     <th>교차로 번호</th>
-                    <td class="pdr-20">
+                    <td>
                       <div class="ui input rounded">
                         <input type="text" disabled />
                       </div>
@@ -103,7 +104,8 @@
             </div>
             <!-- //data-tbl -->
 
-            <em class="modal-body-sub-tit type3">도로 별 신호 연동</em>
+            <!-- 231023 modal-body-sub-tit에 type2로 클래스명 변경 -->
+            <em class="modal-body-sub-tit type2">도로 별 신호 연동</em>
             <div class="data-tbl-very md type3 is-form">
               <table class="ui very basic table md">
                 <thead>
