--- a/base/html/map_crossroad_search.html
+++ b/base/html/map_crossroad_search.html
@@ -15,6 +15,7 @@
     <!-- includeHTML.js : 퍼블리싱 확인용 include -->
     <script src="/base/js/common/includeHTML.js"></script>
     <script src="/base/js/common/ui.js"></script>
+    <script src="/base/js/common/map-iconbar.js"></script>
     <link rel="stylesheet" href="http://map.ngii.go.kr/emap/css/map/OpenLayers-6.4.3.css" />
     <link rel="stylesheet" href="/base/css/common.css" />
     <link rel="stylesheet" href="/base/css/is.css" />
