--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -16,6 +16,7 @@
     <script src="/base/js/common/includeHTML.js"></script>
     <script src="/base/js/lib/jquery.notify.js"></script>
     <script src="/base/js/common/ui.js"></script>
+    <script src="/base/js/common/map-iconbar.js"></script>
     <link rel="stylesheet" href="http://map.ngii.go.kr/emap/css/map/OpenLayers-6.4.3.css" />
     <link rel="stylesheet" href="/base/css/common.css" />
   </head>
