--- a/base/html/map_setting.html
+++ b/base/html/map_setting.html
@@ -17,6 +17,7 @@
     <script src="/base/js/common/ui.js"></script>
     <!-- 230928 map-setting.js 추가(카메라/레이더/신호정보/LOS 관리 설정 관련 ui스크립트는 별도로 js파일로 분리하였습니다. 참고 바랍니다.) -->
     <script src="/base/js/common/map-setting.js"></script>
+    <script src="/base/js/common/map-iconbar.js"></script>
     <link rel="stylesheet" href="http://map.ngii.go.kr/emap/css/map/OpenLayers-6.4.3.css" />
     <link rel="stylesheet" href="/base/css/common.css" />
   </head>
