--- a/base/html/outbreak_situation.html
+++ b/base/html/outbreak_situation.html
@@ -16,7 +16,8 @@
   </head>
   <body>
     <div id="ex" class="modal">
-      <div class="modal-container w466">
+      <!-- 231025 w424클래스명으로 변경 -->
+      <div class="modal-container w424">
         <div class="modal-header">
           <span class="tit">돌발 상태 확인</span>
         </div>
