--- a/base/html/search_main.html
+++ b/base/html/search_main.html
@@ -142,20 +142,7 @@
       <!-- //search-view-container -->
 
       <main class="ly-container">
-        <div id="map1" class="ly-map">
-          <!-- 지도 타입 선택 -->
-          <div class="map-type">
-            <label>
-              <input type="radio" checked name="maptype" />
-              <span>일반지도</span>
-            </label>
-            <label>
-              <input type="radio" name="maptype" />
-              <span>위성지도</span>
-            </label>
-          </div>
-          <!-- //지도 타입 선택 -->
-        </div>
+        <div id="map1" class="ly-map"></div>
         <!-- //ly-map -->
       </main>
       <!-- //ly-container -->
