[공통] 체크박스 디자인 커스텀 작업

--- a/base/html/crossroads_flow.html
+++ b/base/html/crossroads_flow.html
@@ -71,12 +71,14 @@
                   </div>
                   <!-- //date-group -->
 
-                  <div class="ui checkbox primary-chkbox c-bluesky">
+                  <!-- 231026 md클래스명 추가 -->
+                  <div class="ui checkbox primary-chkbox md c-bluesky">
                     <input type="checkbox" id="chk1" />
                     <label for="chk1">주말 제외</label>
                   </div>
                   <!-- //primary-chkbox -->
-                  <div class="ui checkbox primary-chkbox c-bluesky">
+                  <!-- 231026 md클래스명 추가 -->
+                  <div class="ui checkbox primary-chkbox md c-bluesky">
                     <input type="checkbox" id="chk2" />
                     <label for="chk2">공휴일 제외</label>
                   </div>
