--- a/base/html/index.html
+++ b/base/html/index.html
@@ -476,9 +476,7 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo">
-                            <p>- TODO: 체크박스 style 작업 예정</p>
-                          </td>
+                          <td class="col-memo"></td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
