--- a/base/html/crossroads_stats_primitive.html
+++ b/base/html/crossroads_stats_primitive.html
@@ -30,7 +30,8 @@
       <main class="ly-container">
         <div class="ly-sub">
           <div class="ly-setting">
-            <div class="ui breadcrumb">
+            <!-- 231028 pdb-24 클래스명 추가 -->
+            <div class="ui breadcrumb pdb-24">
               <i class="home icon"></i>
               <i class="right angle icon divider"></i>
               <span class="section">교차로</span>
