--- a/base/html/map_main2.html
+++ b/base/html/map_main2.html
@@ -334,124 +334,8 @@
           <!-- //map-popup -->
 
           <!-- 230902 : 돌발/장애 탭 팝업 -->
-          <div class="sudden-disorder-popup">
-            <div class="ui top attached tabular menu rounded">
-              <a href="#none;" class="item active" data-tab="first">돌발</a>
-              <a href="#none;" class="item" data-tab="second">장애</a>
-            </div>
-            <!-- //menu -->
-
-            <!-- 돌발 탭 컨텐츠 -->
-            <div class="sudden-disorder-tab-wrap">
-              <div class="ui bottom attached tab segment tab-sudden active" data-tab="first">
-                <ul class="tab-sudden-list">
-                  <li>
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-peach">역주행</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
-                      <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
-                    </span>
-                  </li>
-                  <li class="read">
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-bisque">정지</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
-                      <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
-                    </span>
-                  </li>
-                  <li>
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-purple">보행자</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
-                      <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
-                    </span>
-                  </li>
-                  <li class="more">
-                    <button type="button">...</button>
-                  </li>
-                </ul>
-                <!-- //tab-sudden-list -->
-                <div class="sudden-disorder-check">
-                  <span class="noti-control">
-                    <em>알림 ON</em>
-                    <label class="slider-switch">
-                      <input type="checkbox" />
-                      <i class="slider"></i>
-                    </label>
-                  </span>
-                  <!-- //noti-control -->
-                  <p class="right">
-                    <span>확인되지 않은 돌발 : 3건</span>
-                    <a href="#" class="ui secondary basic button c-gray-type3 rounded">이력페이지 이동</a>
-                  </p>
-                </div>
-                <!-- //sudden-disorder-check -->
-              </div>
-              <!-- //tab-sudden -->
-
-              <!-- 장애 탭 컨텐츠 -->
-              <div class="ui bottom attached tab segment tab-disorder" data-tab="second">
-                <ul class="tab-sudden-list">
-                  <li>
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-peach">보행자주의안내 VMS 1</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
-                    </span>
-                  </li>
-                  <!-- 확인 버튼 클릭시 read클래스 추가 -->
-                  <li class="read">
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-peach">장비명 및 내용</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
-                    </span>
-                  </li>
-                  <li>
-                    <p class="txt">
-                      <span>12:30:08</span>
-                      <em>태릉 - 공릉역사거리</em>
-                      <i class="txt-badge c-peach">보행자주의안내 VMS 1 내용이 들어갑니다</i>
-                    </p>
-                    <span class="btn-bind">
-                      <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
-                    </span>
-                  </li>
-                  <li class="more">
-                    <button type="button">...</button>
-                  </li>
-                </ul>
-                <!-- //tab-sudden-list -->
-                <div class="sudden-disorder-check">
-                  <p class="right">
-                    <span>확인되지 않은 돌발 : 3건</span>
-                    <a href="#" class="ui secondary basic button c-gray-type3 rounded">이력페이지 이동</a>
-                  </p>
-                </div>
-                <!-- //sudden-disorder-check -->
-              </div>
-              <!-- //tab-disorder -->
-            </div>
-            <!-- //sudden-disorder-tab-wrap -->
-          </div>
+          <!-- 231028 : active클래스 추가시 노출 / 제거시 숨김 -->
+          <div class="sudden-disorder-popup active" include-html="/base/html/common/sudden_disorder_popup.html"></div>
           <!-- //sudden-disorder-popup -->
 
           <!-- 230902 : 돌발 스냅샷 팝업 -->
@@ -537,8 +421,17 @@
       noDimedPopup();
 
       /* 230902 : 아래 js는 퍼블리싱 확인용입니다. 참고해서 개발화면에 반영 부탁드립니다. */
-      // 탭 메뉴
-      $('.sudden-disorder-popup .menu .item').tab();
+      // 돌발/장애 탭 메뉴
+      setTimeout(function () {
+        $('.sudden-disorder-popup .menu .item').tab();
+      }, 200);
+
+      /* 231028 gnb알림 버튼 클릭 이벤트 : 아래 js는 퍼블리싱 확인용입니다. 참고해서 개발화면에 반영 부탁드립니다. */
+      $(document).on('click', '.btn-bell', function () {
+        $('.sudden-disorder-popup').addClass('active');
+        $('.gnb .aside .btn-m').removeClass('active');
+        $('.gnb .aside .pop-user-info').hide();
+      });
 
       // 스냅샷 드래그 이벤트 기능
       $('.sudden-snapshot-popup').draggable({
