1. 교차로 상세 영상 탭 수정 2. 횡단보도 > 시스템관리 목록 및 팝업 작업

--- a/base/html/map_crossroad_view.html
+++ b/base/html/map_crossroad_view.html
@@ -173,9 +173,9 @@
           <section class="cr-camera-info">
             <div class="tit-header">
               <em class="tit">카메라 정보</em>
-              <span class="right">
+              <!-- <span class="right">
                 <a href="#" class="btn-md2">카메라 관리</a>
-              </span>
+              </span> -->
             </div>
             <!-- //tit-header -->
             <div class="data-tbl-gray xs">
@@ -383,6 +383,11 @@
             </table>
           </section>
           <!-- //license-plate-recognition -->
+
+          <div class="ui buttons basic">
+            <a href="#" class="btn-third">카메라 관리</a>
+            <a href="#" class="btn-third">영상인식 ROI 설정</a>
+          </div>
         </div>
         <!-- //영상 탭 -->
         <div class="ui bottom attached tab segment accidents-container" data-tab="third">
